Badge aligned correctly on both printer models (Different versions of HP Color Laserjet)

--- a/site/assets/css/badge.css
+++ b/site/assets/css/badge.css
@@ -2,13 +2,13 @@
 @media screen, print {
     .spacer {  /* Without this spacer div, badge wouldn't be in the correct spot on pages 2+
                   absolute positioning didn't work in Firefox. */
-        height: 1.25in;
+        height: 0.9in;
         width: 5in;
     }
 
     .badge {
         position: relative;
-        margin-left: 2.35in;
+        margin-left: 2.05in;
         width: 4in;
         height: 3in;
         padding: 0;
@@ -23,7 +23,7 @@
         left: -.1in;
         right: 0.5in;
         bottom: .1in;
-        width: 0.6in;
+        width: 0.64in;
         height: 3.327in;
         color: #FFFFFF;
         word-break: break-all;
@@ -31,7 +31,7 @@
         text-align: center;
         vertical-align: middle;
         text-transform: uppercase;
-        padding-top:1em;
+        padding-top:.6em;
     }
 
     .colorbarText {
@@ -54,7 +54,7 @@
 
     .smallName {
         position: absolute;
-        top: 1.4in;
+        top: 1.45in;
         left: 1.5in;
         font-size: 20px;
     }
@@ -69,7 +69,7 @@
 
     .dayText {
         position: absolute;
-        top: 2.75in;
+        top: 2.8in;
         left: 1.8125in;
         width: 2.125in;
         height: .1875in;
